# CppProject

./: CMakeLists.txt
include/: file_handler.h  http_request.h  http_response.h  server.h
public/: index.html  script.js  styles.css
src/: file_handler.cpp  http_request.cpp  http_response.cpp  main.cpp  server.cpp
